<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">1911170_NguyenHuuThanhNam</string>
    <string name="txt_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="txt_forgot_pass">Forgot password</string>
    <string name="txt_no_account">do not have account</string>
    <string name="txt_register">Register</string>
    <string name="app_name2">Từ vựng</string>
    <string name="txt_mess">Essentials</string>
    <string name="txt_flight">While Traveling</string>
    <string name="txt_hospital">Help / Medical</string>
    <string name="txt_hotel">At the hotel</string>
    <string name="txt_restaurant">At the Restaurant</string>
    <string name="txt_coctail">At the Bar</string>
    <string name="txt_store">At the Store</string>
    <string name="txt_work">Work</string>
    <string name="txt_time">Time</string>
    <string name="txt_education">Education</string>
    <string name="txt_movie">Entertainment</string>

</resources>