<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bg_top" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="220dp"

            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </FrameLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/bg_radius"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/hint_email"
        android:padding="10dp"
        android:textSize="18sp"
        android:drawableLeft="@drawable/ic_email" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/bg_radius"
        android:drawable làm gì có file drawble strart nên t truy xuất vô drabael len 30 di ok
    ="@drawable/ic_key"
        android:drawablePadding="10dp"
        android:hint="@string/hint_password"
        android:padding="10dp"
        android:textSize="18sp"
        android:drawableLeft="@drawable/ic_key" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"

        android:text="@string/txt_forgot_pass"
        android:textColor="@color/black"
        android:textSize="18sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_login"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/txt_login"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/txt_no_account"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/txt_register"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold" />
    </TableRow>
</LinearLayout>